rtest/tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax02/Test.java
// .result=COMPILE_FAIL
public class Test {
	public interface A {
		default void m();
	}
}